[gd_scene load_steps=10 format=3 uid="uid://dj2y33fgklcnu"]

[ext_resource type="Script" path="res://game/intermission/modifying/ui_pages/spells_page.gd" id="1_4kgu1"]
[ext_resource type="Texture2D" uid="uid://dk5bqp8lelwcr" path="res://spells/textures/shitty_wayback_point_texture.png" id="1_5hsrt"]

[sub_resource type="LabelSettings" id="LabelSettings_tw3is"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_8siio"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_7jlov"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_u6rec"]
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gbhim"]
bg_color = Color(0.294118, 0.294118, 0.294118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijh4m"]
bg_color = Color(0.392157, 0.392157, 0.392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfskf"]
bg_color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="SpellsPage" type="VBoxContainer"]
theme_override_constants/separation = 32
script = ExtResource("1_4kgu1")

[node name="Title" type="Label" parent="."]
layout_mode = 2
text = "Change Spells"
label_settings = SubResource("LabelSettings_tw3is")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CurrentAbilitiesContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="CurrentSpellContainer" type="VBoxContainer" parent="VBoxContainer/CurrentAbilitiesContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer"]
layout_mode = 2
text = "Spell #1:"
label_settings = SubResource("LabelSettings_8siio")

[node name="CurrentSpell1Icon" type="TextureRect" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_5hsrt")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer/HBoxContainer"]
layout_mode = 2
text = "Level: "
horizontal_alignment = 1

[node name="CurrentSpell1LevelLabel" type="Label" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="CurrentSpellContainer2" type="VBoxContainer" parent="VBoxContainer/CurrentAbilitiesContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer2"]
layout_mode = 2
text = "Spell #2:"
label_settings = SubResource("LabelSettings_8siio")

[node name="CurrentSpell2Icon" type="TextureRect" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_5hsrt")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer2"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer2/HBoxContainer"]
layout_mode = 2
text = "Level: "
horizontal_alignment = 1

[node name="CurrentSpell2LevelLabel" type="Label" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="CurrentSpellContainer3" type="VBoxContainer" parent="VBoxContainer/CurrentAbilitiesContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer3"]
layout_mode = 2
text = "Spell #3:"
label_settings = SubResource("LabelSettings_8siio")

[node name="CurrentSpell3Icon" type="TextureRect" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_5hsrt")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer3"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer3/HBoxContainer"]
layout_mode = 2
text = "Level: "
horizontal_alignment = 1

[node name="CurrentSpell3LevelLabel" type="Label" parent="VBoxContainer/CurrentAbilitiesContainer/CurrentSpellContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="AbilityContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TabBar" type="TabBar" parent="AbilityContainer"]
custom_minimum_size = Vector2(416, 0)
layout_mode = 2
current_tab = 0
tab_count = 3
tab_0/title = "Spell #1"
tab_1/title = "Spell #2"
tab_2/title = "Spell #3"

[node name="SpellsList" type="ItemList" parent="AbilityContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(416, 320)
layout_mode = 2
item_count = 3
fixed_icon_size = Vector2i(32, 32)
item_0/text = "Wayback Point (Level: 1/5)"
item_0/icon = ExtResource("1_5hsrt")
item_1/text = "TEST_2"
item_1/icon = ExtResource("1_5hsrt")
item_1/disabled = true
item_2/text = "TEST_3"
item_2/icon = ExtResource("1_5hsrt")

[node name="SpellDescriptionContainer" type="VBoxContainer" parent="AbilityContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 192)
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="AbilityContainer/SpellDescriptionContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="SpellNameLabel" type="Label" parent="AbilityContainer/SpellDescriptionContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Waypack Point"
label_settings = SubResource("LabelSettings_7jlov")
horizontal_alignment = 1

[node name="Label" type="Label" parent="AbilityContainer/SpellDescriptionContainer/HBoxContainer"]
layout_mode = 2
text = " (Level: "
label_settings = SubResource("LabelSettings_7jlov")
horizontal_alignment = 1

[node name="SpellLevelLabel" type="Label" parent="AbilityContainer/SpellDescriptionContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1/5"
label_settings = SubResource("LabelSettings_7jlov")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="AbilityContainer/SpellDescriptionContainer/HBoxContainer"]
layout_mode = 2
text = ")"
label_settings = SubResource("LabelSettings_7jlov")
horizontal_alignment = 1

[node name="SpellDescriptionLabel" type="Label" parent="AbilityContainer/SpellDescriptionContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(416, 0)
layout_mode = 2
text = "Places a point in space that you can teleport to at anytime. "
label_settings = SubResource("LabelSettings_u6rec")
horizontal_alignment = 1
autowrap_mode = 2

[node name="ReadyButton" type="Button" parent="."]
custom_minimum_size = Vector2(416, 75)
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../MainMenuButton")
theme_override_font_sizes/font_size = 36
theme_override_styles/hover = SubResource("StyleBoxFlat_gbhim")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ijh4m")
theme_override_styles/normal = SubResource("StyleBoxFlat_hfskf")
text = "Ready"

[connection signal="item_selected" from="AbilityContainer/SpellsList" to="." method="_on_spells_list_item_selected"]
[connection signal="pressed" from="ReadyButton" to="." method="_on_ready_button_pressed"]
